src/snapshots/hemlis__parser__tests__typ_app.snap
---
source: src/parser.rs
expression: "p_typ(\"X.Z (A (B.C D)) E\")"
---
18 of 18
===
Module
 Header
  MName
   (0, 7)->(0, 10)
  NULL
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::App
    Typ::App
     Typ::Constructor
      QProperName
       Qual
        (2, 5)->(2, 7)
       ProperName
        (2, 7)->(2, 8)
     Typ::Paren
      Typ::App
       Typ::Constructor
        QProperName
         NULL
         ProperName
          (2, 10)->(2, 11)
       Typ::Paren
        Typ::App
         Typ::Constructor
          QProperName
           Qual
            (2, 13)->(2, 15)
           ProperName
            (2, 15)->(2, 16)
         Typ::Constructor
          QProperName
           NULL
           ProperName
            (2, 17)->(2, 18)
    Typ::Constructor
     QProperName
      NULL
      ProperName
       (2, 21)->(2, 22)
===
